@@ -1,4 +1,9 @@
-2012-02-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  More efficient access to two-byte variables near the stack pointer for r2k.
+
+2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c,
 	  src/z80/peeph-z80.def:
